# ollama-tools

./: .gitignore  README.md  pyproject.toml
docs/: TOOL_SCHEMAS.md
src/ollama_tools/: __init__.py  cli.py  executor.py  proxy.py  schemas.py
tests/: __init__.py  test_executor.py
