[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-tools"
version = "0.1.0"
description = "Tool execution proxy for Ollama models - enables file operations and command execution"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ollama-tools contributors" }
]
keywords = ["ollama", "llm", "tools", "function-calling", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ollama-tools-proxy = "ollama_tools.cli:main"

[project.urls]
Repository = "https://github.com/yourusername/ollama-tools"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_tools"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
